src/app/home/site/menus/daily-menu/menus/fresh-salads/fresh-salads.scss
:host {
    display: block;
    width: 100%;
    height: 100%;
}

.fresh-salads-wrapper{
    width: 700px;

    @media only screen and (max-width: 430px){
        width: 100%;
    }
}

.fresh-salads-row{
    display: grid;
    grid-template-columns: 1fr 250px;
    padding: 16px;

    .prices{
        display: grid;
        grid-template-columns: 33% 33% 34%;
        gap: 16px;
    }

    @media only screen and (max-width: 430px){
        display: block;
        width: 100%;
    }
}

.fresh-salads-row:not(.fresh-salads-header) {
    border: 1px solid var(--gray-400);
    border-radius: 8px;
    margin-bottom: 16px;
}

.fresh-salads-header{
    font-weight: bold;

    @media only screen and (max-width: 430px){
        display: none;
    }
}

.personal, .small, .large {
    text-align: center;
}

.toppings{
    font-size: .9rem;
}

.label{
    font-weight: bold;
}

.description{
    font-size: .9rem;
    margin-top: 8px;
}

.mobile-header{
    display: none;

    @media only screen and (max-width: 430px){
        display: block;
        font-weight: bold;
        margin-top: 8px;
        margin-bottom: 4px;
    }
}

